--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-Sun Sep 24 16:07:19 CEST 2017
+<!DOCTYPE html>
+<head>
+<title>Testsida</title>
+</head>
+<body>
+Bara en testsida
+</body>
+</html>
